Sat May 13 11:56:35 2000  George Lebl <jirka@5z.com>

	* gnome-scores.c (gnome_scores_new): make the strftime buffer 256
	  chars, stop cutting the last character, also if strftime fails,
	  we need to reset the buffer to something sane.

2000-05-10  Karl Eichwalder  <ke@suse.de>

	* Makefile.am (gnometypebuiltins.h, gnometypebuiltins_vars.c,
	gnometypebuiltins_ids.c): Add LC_COLLATE=C to avoid NLS nuisances
	while calling awk.

Mon May 08 17:21:33 2000  George Lebl <jirka@5z.com>

	* gnome-icon-entry.c: when an absolute path is passed to
	  set_pixmap_subdir the standard pixmap path will not be prepended

Sun May 07 17:52:27 2000  Iain Holmes <ih@csd.abdn.ac.uk>

	* gnome-font-picker.c (gnome_font_picker_label_set_font_from_label):
	Apply Patch from Charles Kerr fixing memory leak.

Sat May 06 16:52:27 2000  George Lebl <jirka@5z.com>

	* gnome-calculator.c (set_result) (add_digit) (negate_val):
	  setlocale to "C" and then back to original whenever we are reading
	  and writing floats.  this is because we can't deal with strings
	  of any locale yet.

Fri May 05 19:23:20 2000  George Lebl <jirka@5z.com>

	* gnome-about.c: make an error dialog if gnome_url_show fails

	* gnome-href.c: make an error dialog if gnome_url_show fails also fix
	  the includes

	* gnome-helpsys.c: minor doc fix and use the new gnome_url_show_full
	  routine with the error argument.

	* Makefile.am: add @LIBART_LIBS@ for the test and demo programs

Sun Apr 30 02:12:53 2000  George Lebl <jirka@5z.com>

	* animator_demo.c (main): fix warnings

	* gnome-animator.c (prepare_aux_pixmaps) (paint)
	  (gnome_animator_append_frame_from_pixbuf_)
	  (gnome_animator_append_frames_from_pixbuf): Make this compile with
	  newest gdk-pixbuf.  It however can't possibly work due to usage
	  of unused variables, see all the FIXMEs.

	* gnome-calculator.[ch]:  Fixup Federico's patch.  fix clear/reset
	  as in gnome-libs-1-0, fix no_func crash.  Add an accessor for